--- a/first_project.html
+++ b/first_project.html
@@ -19,8 +19,8 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div id="head" class="container">
-			<p>To Do</p>
+		<div class="container">
+			<p class="head">To Do</p>
 		</div>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
