--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="panel panel-default task-block">
                 <div class="panel-body" id="tasks-container">
-                    <div class="checkbox task-row">
+                    <!--<div class="checkbox task-row">
                         <label>
                             <input type="checkbox" class="chek" value="">Learn HTML
                         </label>
@@ -62,16 +62,18 @@
                             <input class="chek" type="checkbox" value="">Meet Angular
                         </label>
                         <i class="fa fa-times close" aria-hidden="true"></i>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
     </div>
+   
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.js"></script>
+    <script src="scripts/TaskService.js"></script>
     <script src="scripts/common.js"></script>
 
 </body>
